BUG FIXES: player base header trophie spacing, unit level 100 font change, unit section progress bar 100% decimal removal, hide player's BB card if they dont have BB yet, removed autocomplete bg color change for input tags

--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -132,6 +132,10 @@
     color: $primary-color;
 }
 
+.level-hundred {
+    font-size: 11px;
+}
+
 .unit-img {
     aspect-ratio: 1/1;
     width: inherit;
